Add html5lib tree smoke harness and project README

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "test:html5lib:tree:smoke": "node scripts/run-html5lib-tree-smoke.mjs"
   }
 }
